# eficas_tools

./: CMakeLists.txt  PourADaoEtTelemac.txt  recommends  venv.cmd
Accas/: A_ASSD.py  A_AU_MOINS_UN.py  A_AU_PLUS_UN.py  A_AVANT.py  A_A_CLASSER.py  A_BLOC.py  A_ENSEMBLE.py  A_ETAPE.py  A_EVAL.py  A_EXCLUS.py  A_FACT.py  A_FICHIER.py  A_FORM.py  A_FORM_ETAPE.py  A_JDC.py  A_JDC_CATA.py  A_JDC_CATA_SINGLETON.py  A_MACRO.py  A_MACRO_ETAPE.py  A_MCBLOC.py  A_MCFACT.py  A_MCLIST.py  A_MCNUPLET.py  A_MCSIMP.py  A_MEME_NOMBRE.py  A_NUPLET.py  A_OPER.py  A_PRESENT_ABSENT.py  A_PRESENT_PRESENT.py  A_PROC.py  A_PROC_ETAPE.py  A_SALOME_ENTRY.py  A_SENSIBILITE.py  A_SIMP.py  A_TUPLE.py  A_UN_PARMI.py  A_VALIDATOR.py  CMakeLists.txt  __init__.py
CatasDeTests/: .cataMemesNoms.py.swp  .cataTesteDelete.py.swp  cataListes.py  cata_FactFreresMemesNoms.py  cata_UserAssd.py  generateXML.py  generateXSD.py  prefs.py  prefs_Essai.py  qtEficasEssai.py
Codes/: CMakeLists.txt  PourADaoEtTelemac.txt  Readme.txt
Codes/OldCodes/Aster/Cata/: CMakeLists.txt  __init__.py
Codes/OldCodes/Aster/Cata/cataSTA11/: __init__.py  cata.py  ops.py
Codes/OldCodes/Openturns_Wrapper/: CMakeLists.txt  OpenTURNS_Cata_Wrapper_V1.py  OpenTURNS_Cata_Wrapper_V2.py  OpenTURNS_Cata_Wrapper_V3.py  OpenTURNS_Cata_Wrapper_V4.py  configuration_OPENTURNS_WRAPPER.py  prefs.py  prefs_OPENTURNS_WRAPPER.py  qtEficas_openturns_wrapper.py  style.py
Codes/OldCodes/UiQT4/: CMakeLists.txt  Tuple2.ui  Tuple3.ui  desBaseWidget.ui  desChoixCata.ui  desChoixCode.ui  desChoixCommandes.ui  desChoixLangue.ui  desGroupeOptionnel.ui  desRecherche.ui  desRechercheCatalogue.ui  desSelectVal.ui  desViewRegles.ui  desViewTexte.ui  desVisu.ui  desWidget4a6RadioButton.ui  desWidgetBloc.ui  desWidgetCB.ui  desWidgetCommande.ui  desWidgetCommentaire.ui  desWidgetCreeParam.ui  desWidgetDate.ui  desWidgetFact.ui  desWidgetFactPlie.ui  desWidgetFormule.ui  desWidgetHeure.ui  desWidgetInactif.ui  desWidgetInformation.ui  desWidgetMatrice.ui  desWidgetOptionnel.ui  desWidgetOptionnelMC.ui  desWidgetParam.ui  desWidgetPlusieursBase.ui  desWidgetPlusieursInto.ui  desWidgetPlusieursIntoOrdonne.ui  desWidgetPlusieursPlie.ui  desWidgetPlusieursTuple.ui  desWidgetRadioButton.ui  desWidgetSDCOInto.ui  desWidgetSimpBase.ui  (+15 more)
Codes/Telemac/: .monCode_Cata.py.swp  CMakeLists.txt  __init__.py  aideAuxConvertisseurs.py  artemis_cata_auto.py  artemis_dicoCasEnToCata.py  artemis_dicoCasFrToCata.py  artemis_enum_auto.py  configuration_TELEMAC.py  gaia_cata_auto.py  gaia_dicoCasEnToCata.py  gaia_dicoCasFrToCata.py  gaia_enum_auto.py  gaia_labelCataToIhm_en.ts  gaia_labelCataToIhm_fr.ts  khione_cata_auto.py  khione_dicoCasEnToCata.py  khione_dicoCasFrToCata.py  khione_enum_auto.py  khione_labelCataToIhm_en.qm  khione_labelCataToIhm_fr.qm  postel3d_cata_auto.py  prefs.py  prefs_TELEMAC.py  prefs_salome_Telemac.py  qtEficas_Telemac.py  reecrit_cas_en_comm.py  sisyphe_cata_auto.py  sisyphe_dicoCasEnToCata.py  sisyphe_dicoCasFrToCata.py  sisyphe_enum_auto.py  stbtel_cata_auto.py  stbtel_dicoCasEnToCata.py  stbtel_dicoCasFrToCata.py  stbtel_enum_auto.py  stbtel_labelCataToIhm_en.qm  stbtel_labelCataToIhm_fr.qm  telemac2d_cata_auto.py  telemac2d_dicoCasEnToCata.py  telemac2d_dicoCasFrToCata.py  (+17 more)
Codes/Telemac/mascaret/: CMakeLists.txt  appli.py  configuration_mascaret.py  mascaret_V7_cata.py  prefs.py  prefs_mascaret.py
Doc/Users/: CMakeLists.txt  Makefile  ajouter_une_commande.rst  color_chart.rst  commentaires_parametres.rst  conf.py  eficas_icons.rst  eficas_in_salome.rst  eficas_notions.rst  eficas_presentation.rst  eficas_rules.rst  index.rst  lancer_eficas.rst  nouveau_JDC.rst  parametrer_une_commande.rst  python_rules.rst  widgetInDetails.rst
Editeur/: CMakeLists.txt  Eficas_utils.py  Objecttreeitem.py  TUI_editor.py  __init__.py  a  analyse_catalogue.py  analyse_catalogue_initial.py  autre_analyse_cata.py  catadesc.py  comploader.py  configuration.py  editor.py  editor_manager.py  eficas_appli.py  eficas_go.py  eficas_utils.py  getVersion.py  listePatrons.py  loggingEnvironnement.py  session.py  uiinfo.py  viewManagerSsIhm.py
Efi2Xsd/: AccasXsd.py  AccasXsdV1.py  AccasXsdV17oct.py  MCAccasXML.py  OKAccasXsd.py  balisesV1.py  balisesXSD.py  introspect.py  mapDesTypes.py
Extensions/: commande_comm.py  commentaire.py  eficas_exception.py  etape_niveau.py  i18n.py  (+13 more)
Traducteur/: CMakeLists.txt  calcG.py  changeValeur.py  dictErreurs.py  inseremocle.py  load.py  log.py  mocles.py  movemocle.py  parseur.py  regles.py  removemocle.py  renamemocle.py  traduitV10V11.py  traduitV11V12.py  traduitV7V8.py  traduitV8V9.py  traduitV9V10.py  utils.py  visiteur.py
UiQT5/: CMakeLists.txt  GNUmakefile  desViewInfoJobVP.ui  desWidget4a6RadioButton.ui  desWidgetBar.ui  desWidgetCB.ui  desWidgetCBIntoSug.ui  desWidgetCBSelection5C.ui  desWidgetCBSelectionVP.ui  desWidgetCommande.ui  desWidgetCommentaire.ui  desWidgetDate.ui  desWidgetDate5C.ui  desWidgetDateSelection5C.ui  desWidgetDateSelectionVP.ui  desWidgetDateVP.ui  desWidgetFact.ui  desWidgetFactHorizon.ui  desWidgetFactPlie.ui  desWidgetFactTableau.ui  desWidgetFormule.ui  desWidgetHeure.ui  desWidgetInactif.ui  desWidgetIntoSug.ui  desWidgetLabels.ui  desWidgetMatrice.ui  desWidgetNiveauFact.ui  desWidgetOptionnelMC.ui  desWidgetParam.ui  desWidgetPlusieursBase.ui  desWidgetPlusieursInto.ui  desWidgetPlusieursIntoOrdonne.ui  desWidgetPlusieursPlie.ui  desWidgetPlusieursTuple.ui  desWidgetProfile.ui  desWidgetRadioButton.ui  desWidgetSDCOInto.ui  desWidgetSimpBase.ui  desWidgetSimpBool.ui  desWidgetSimpComplexe.ui  (+27 more)
UiQT5/CreeTraductions/: eficas.pro  pourValidation.py
UiQT5/icons/: CMakeLists.txt
generator/: CMakeLists.txt  Formatage.py  __init__.py  generator_5CRequeteSelection.py  generator_GroupMA.py  generator_TELEMAC.py  generator_UQ.py  generator_XML.py  generator_aplat.py  generator_dico.py  generator_dicoImbrique.py  generator_modification.py  generator_python.py  post_csv_rn.py  textePersalys.py
generator/oldCodes/: generator_PSEN.py  generator_ProcessOutputs.py  generator_map.py  generator_vers3DSalome.py
(+1226 files in other folders)
