# -*- coding: utf-8 -*-
#            CONFIGURATION MANAGEMENT OF EDF VERSION
# ======================================================================
# COPYRIGHT (C) 1991 - 2002  EDF R&D                  WWW.CODE-ASTER.ORG
# THIS PROGRAM IS FREE SOFTWARE; YOU CAN REDISTRIBUTE IT AND/OR MODIFY
# IT UNDER THE TERMS OF THE GNU GENERAL PUBLIC LICENSE AS PUBLISHED BY
# THE FREE SOFTWARE FOUNDATION; EITHER VERSION 2 OF THE LICENSE, OR
# (AT YOUR OPTION) ANY LATER VERSION.
#
# THIS PROGRAM IS DISTRIBUTED IN THE HOPE THAT IT WILL BE USEFUL, BUT
# WITHOUT ANY WARRANTY; WITHOUT EVEN THE IMPLIED WARRANTY OF
# MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE. SEE THE GNU
# GENERAL PUBLIC LICENSE FOR MORE DETAILS.
#
# YOU SHOULD HAVE RECEIVED A COPY OF THE GNU GENERAL PUBLIC LICENSE
# ALONG WITH THIS PROGRAM; IF NOT, WRITE TO EDF R&D CODE_ASTER,
#    1 AVENUE DU GENERAL DE GAULLE, 92141 CLAMART CEDEX, FRANCE.
#
#
# ======================================================================


install ( FILES aideAuxConvertisseurs.py
                configuration_TELEMAC.py
                artemis_dicoCasEnToCata.py
                artemis_dicoCasFrToCata.py
                artemis_enum_auto.py
                artemis_labelCataToIhm_en.qm
                artemis_labelCataToIhm_fr.qm
                artemis_cata_auto.py
                postel3d_dicoCasEnToCata.py
                postel3d_dicoCasFrToCata.py
                postel3d_enum_auto.py
                postel3d_labelCataToIhm_en.qm
                postel3d_labelCataToIhm_fr.qm
                postel3d_cata_auto.py
                sisyphe_dicoCasEnToCata.py
                sisyphe_dicoCasFrToCata.py
                sisyphe_enum_auto.py
                sisyphe_labelCataToIhm_en.qm
                sisyphe_labelCataToIhm_fr.qm
                sisyphe_cata_auto.py
                stbtel_dicoCasEnToCata.py
                stbtel_dicoCasFrToCata.py
                stbtel_enum_auto.py
                stbtel_labelCataToIhm_en.qm
                stbtel_labelCataToIhm_fr.qm
                stbtel_cata_auto.py
                telemac2d_dicoCasEnToCata.py
                telemac2d_dicoCasFrToCata.py
                telemac2d_enum_auto.py
                telemac2d_labelCataToIhm_en.qm
                telemac2d_labelCataToIhm_fr.qm
                telemac2d_cata_auto.py
                telemac3d_dicoCasEnToCata.py
                telemac3d_dicoCasFrToCata.py
                telemac3d_enum_auto.py
                telemac3d_labelCataToIhm_en.qm
                telemac3d_labelCataToIhm_fr.qm
                telemac3d_cata_auto.py
                tomawac_dicoCasEnToCata.py
                tomawac_dicoCasFrToCata.py
                tomawac_enum_auto.py
                tomawac_labelCataToIhm_en.qm
                tomawac_labelCataToIhm_fr.qm
                tomawac_cata_auto.py
                waqtel_dicoCasEnToCata.py
                waqtel_dicoCasFrToCata.py
                waqtel_enum_auto.py
                waqtel_labelCataToIhm_en.qm
                waqtel_labelCataToIhm_fr.qm
                waqtel_cata_auto.py
                gaia_dicoCasEnToCata.py
                gaia_dicoCasFrToCata.py
                gaia_enum_auto.py
                gaia_labelCataToIhm_en.qm
                gaia_labelCataToIhm_fr.qm
                gaia_cata_auto.py
                khione_dicoCasEnToCata.py
                khione_dicoCasFrToCata.py
                khione_enum_auto.py
                khione_labelCataToIhm_en.qm
                khione_labelCataToIhm_fr.qm
                khione_cata_auto.py
                prefs.py
                prefs_TELEMAC.py
                properties.py
                qtEficas_Telemac.py
	  DESTINATION ${CMAKE_INSTALL_PREFIX}/Telemac
        )



### Local Variables:
### mode: cmake
### End:
